# plugin-data

./: .gitignore  BREAKAGE_LOG.md  CLAUDE.md  Cargo.toml  LICENSE.md  README.md  deny.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml
.config/: nextest.toml
.github/workflows/: publish.yml  rust.yml  vitest.yml
data-automation/: Cargo.toml
data-automation/src/: lib.rs
data-barcode/: Cargo.toml
data-barcode/src/: code128.rs  ean.rs  lib.rs  qr.rs
data-bind/: Cargo.toml
data-bind/src/: diff.rs  lib.rs  mapping.rs
data-cli/: Cargo.toml
data-cli/src/: lib.rs  main.rs
data-conformance/: Cargo.toml
data-conformance/src/: lib.rs
data-conformance/tests/: automation.rs  barcode.rs  batch_run.rs  bind.rs  expr_engine.rs  expr_format.rs  expr_logic.rs  expr_math.rs  expr_temporal.rs  expr_text.rs  frame_transform.rs  governed.rs  image.rs  locale.rs  lower.rs  mapping.rs  oracle.rs  perf.rs  properties.rs  provider.rs  query.rs  recordflow.rs  roundtrip.rs  rule.rs  security.rs  sources.rs
data-core/: Cargo.toml  build.rs
data-core/src/: binding.rs  expr.rs  ids.rs  lib.rs  model.rs  temporal.rs  value.rs
data-expr/: Cargo.toml  build.rs
data-expr/src/: ctx.rs  eval.rs  lexer.rs  lib.rs  parser.rs
data-expr/src/families/: format.rs  logic.rs  math.rs  mod.rs  temporal.rs  text.rs
data-js/: Cargo.toml
data-js/src/: core.rs  lib.rs
data-lower/: Cargo.toml
data-lower/src/: lib.rs
data-query/: Cargo.toml
data-query/src/: lib.rs
data-script/: Cargo.toml
data-script/src/: lib.rs
data-sources/: Cargo.toml
data-sources/src/: governed.rs  lib.rs  remote.rs
registry/features/: automation.yaml  barcode.yaml  bind.yaml  expr.yaml  frame-transform.yaml  governed.yaml  i18n.yaml  lower.yaml  perf.yaml  plugin.yaml  provider.yaml  query.yaml  roadmap.yaml  security.yaml  source.yaml
registry/functions/: format.yaml  logic.yaml  math.yaml  temporal.yaml  text.yaml
scripts/: build-wasm.sh  check-contract-imports.mjs  vendor-duckdb.sh
