# paged.data — Rust workspace. Crates live at REPO TOP LEVEL per the spec
# (§4 of thoughts/docs/paged/plugin-data/base-idea.md), not under crates/.
# references/ is NEVER a member (read-only clean-room mounts — NOT mounted
# in M0). data-automation is a RESERVED skeleton (T2/§10 — batch/headless
# generation), present like sheet-grid/sheet-chart are present-but-reserved.
[workspace]
resolver = "2"
members = [
    "data-core",
    "data-expr",
    "data-sources",
    "data-query",
    "data-bind",
    "data-lower",
    "data-automation",
    "data-js",
    "data-cli",
    "data-conformance",
]

[workspace.package]
version = "0.0.0"
edition = "2021"
rust-version = "1.93"
license = "MPL-2.0 OR LicenseRef-PMEL"
publish = false

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"

[workspace.lints.clippy]
needless_pass_by_value = "allow"
too_many_arguments = "allow"

[workspace.dependencies]
thiserror = "2"
smallvec = { version = "1", features = ["serde"] }
compact_str = { version = "0.8", features = ["serde"] }
rustc-hash = "2"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
# wasm surface (data-js only)
wasm-bindgen = "0.2"
js-sys = "0.3"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
getrandom = { version = "0.3", features = ["wasm_js"] }
# test-only (data-conformance)
proptest = "1"

# wasm-opt is run by scripts/build-wasm.sh (binaryen pinned in CI — see the
# binaryen reftypes gotcha; locally it is skipped when absent).

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
