[package]
name = "data-automation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "paged.data print-automation / batch generation (spec §10). RESERVED skeleton — the T2 (M2) crate. Present-but-reserved like sheet-grid/sheet-chart; the interface lands at M2. Depends ONLY on data-core."

[lints]
workspace = true

[dependencies]
data-core = { path = "../data-core" }
