[package]
name = "data-barcode"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "paged.data barcode/QR symbology encoders (spec §9.7, the EasyCatalog catalog-publishing staple): pure clean-room module/bar encoders (EAN-13/UPC-A, Code-128, QR) -> a frozen BarcodeGeometry filled-rect grid in a unit box, lowered to native vector ops. Dependency-free; derived from public ISO/IEC specs, never a GPL library. Pure model->IR; depends ONLY on data-core."

[lints]
workspace = true

[dependencies]
data-core = { path = "../data-core" }
serde.workspace = true
thiserror.workspace = true
